@@ -114,6 +114,11 @@ public class ImageIcon
     return image;
   }
 
+  public void setImage(Image image)
+  {
+    this.image = Toolkit.getDefaultToolkit().createImage(image.getSource());
+  }
+
   public String getDescription()
   {
     return description;
